<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CreepMe</string>
    <string name="creep_new_friend">CREEP SOMEONE NEW</string>
    <string name="map_all_selections">MAP ALL SELECTIONS</string>
    <string name="cancel_selections">CANCEL ALL SELECTIONS</string>
    <string name="action_settings">Settings</string>
    <string name="map_selections">Map Selected</string>
    <string name="delete_selections">Delete Selected</string>
    <string name="add_creep">Add New Creep</string>
    <string name="selector_title">Who you want to creep on?</string>
    <string name="who_you_creeping">Who you\'re creepin\' on</string>
    <string name="who_creeping_you">Who\'s creepin\' on you</string>
    <string name="choose_friend">Choose Friend</string>
    <string name="gps_enabled_warning">GPS must be enabled</string>
    <string name="profile_pic_description">Profile Picture</string>
    <string name="default_friend_name">&lt; who yer creepin &gt;</string>
    <string name="creep_time">Set Duration:</string>
    <string name="default_hours">05</string>
    <string name="default_minutes">00</string>
    <string name="hr">hr</string>
    <string name="min">min</string>
    <string name="to_number_hint">Enter Friend\'s Name</string>
    <string name="selector_final">Creep Them</string>
    <string name="default_time">00:00:00</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="directions">GET DIRECTIONS</string>

</resources>
