<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/creep_new_friendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="0"
            android:onClick="newFriendSelector"
            android:text="@string/creep_new_friend" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/who_you_creeping"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/who_you_creepingList"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadeScrollbars="false" />

        <Button
            android:id="@+id/map_selectionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="0"
            android:onClick="mapSelections"
            android:text="@string/map_all_selections" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/who_creeping_you"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/who_creeping_youList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fadeScrollbars="false" />

        <Button
            android:id="@+id/cancel_selectionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            android:onClick="cancelSelections"
            android:text="@string/cancel_selections" />
    </LinearLayout>

</LinearLayout>