<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
	
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:layout_weight="1">
	    
	    <TextView
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp" 
	        android:textSize="20sp"
	        android:text="@string/who_you_creeping"
	        style="?android:listSeparatorTextViewStyle" />
    
	    <ListView
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1" />
	    
	    <Button
	        android:id="@+id/creep_new_friendButton"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="0dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:text="@string/creep_new_friend"
	        android:textStyle="bold"
	        android:layout_weight="0" />
	    
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    android:layout_weight="1">
    
	    <TextView
			android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="0dp" 
	        android:textSize="20sp"
	        android:text="@string/who_creeping_you"
	        style="?android:listSeparatorTextViewStyle" />
	    
	    <ListView
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1" />
	    
	    <Button
	        android:id="@+id/cancel_selectionButton"
	        android:layout_marginTop="5dp"
	        android:layout_marginBottom="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:text="@string/cancel_selections"
	        android:textStyle="bold"
	        android:layout_weight="0" />
	    
	</LinearLayout>

</LinearLayout>

