<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@android:drawable/list_selector_background"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/cancelBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" />

    <ImageView
        android:id="@+id/profile_picImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/profile_pic_description" />

    <TextView
        android:id="@+id/friend_nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/follow_timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/default_time"
        android:textSize="14sp" />

    <View
        android:layout_width="15dp"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/gps_enabledImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/gps_enabled" />

    <View
        android:layout_width="30dp"
        android:layout_height="match_parent" />

</LinearLayout>